# fc2sqlite

./: .gitignore  README.md  pyproject.toml
fc2sqlite/: __init__.py  __main__.py  base.py  fa_tools.py  grib_tools.py  interpolate.py  logger.py  phys_functions.py  sqlite_tools.py
fc2sqlite/data/: param_list_default.json  param_list_fa.json  param_list_sfc_ALARO_det.json  param_list_sfc_ALARO_eps.json  param_list_sfc_HARMONIE_AROME_det.json  param_list_sfc_HARMONIE_AROME_eps.json  param_list_ua_det.json  param_list_ua_eps.json  temp_list_default.csv
